--- a/docs/style.css
+++ b/docs/style.css
@@ -2,16 +2,14 @@ html,
 body {
   padding: 0;
   margin: 0;
-  background-image: url("icons/background.png");
-  background-repeat: no-repeat;
-  background-size: cover;
   height: 100%;
   width: 100%;
 }
 
-main {
-  height: 100%;
-  width: 100%;
+body {
+  background-image: url("icons/background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -26,7 +24,7 @@ main {
 .nickName {
   color: #f6f4e6;
   font-family: Righteous-Regular;
-  font-size: 5em;
+  font-size: 6rem;
   padding: 0;
   margin: 0;
   text-shadow: #4071ac -5px -5px;
@@ -39,17 +37,18 @@ main {
 
 .status {
   color: #f6f4e6;
-  font-size: 1.3em;
-  max-width: 600px;
+  font-size: 1.3rem;
   word-wrap: normal;
   font-family: Caveat;
-  padding-bottom: 10px;
-  margin-bottom: 10px;
+  padding-bottom: 1vmax;
+  margin-bottom: 1vmax;
   text-align: center;
 }
 
 .media {
-  margin-top: 15px;
+  width: 20em;
+  display: flex;
+  justify-content: space-between;
 }
 
 .media img {
